[package]
name = "quic-h3"
version = "0.1.0"
edition = "2024"
description = "HTTP/3 implementation in Rust"
license = "MIT"
readme = "README.md"

[dependencies]
bytes = "1.11.0"
rand = "0.9.2"
ring = "0.17.14"
rustls = {version = "0.23.35", default-features = false, features = ["ring", "std"]}
thiserror = "2.0.17"
tokio = {version = "1.48.0", features = ["full"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
tokio-test = "0.4.4"
