[package]
name = "quic-h3"
version = "0.1.0"
edition = "2024"
description = "HTTP/3 implementation in Rust"
license = "MIT"
readme = "README.md"

[dependencies]
bytes = "1.11.0"
criterion = "0.8.2"
rand = "0.9.2"
ring = "0.17.14"
rustls = {version = "0.23.35", default-features = false, features = ["ring", "std"]}
thiserror = "2.0.17"
tokio = {version = "1.48.0", features = ["full"]}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4.4"

[[bin]]
name = "quic-client"
path = "src/bin/client.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bench]]
name = "qpack"
harness = false